# Tellr

./: .env.example  .gitignore  CONTRIBUTING.md  HANDOVER.md  LICENSE  README.md  pyproject.toml  recorder.py  requirements.txt  run.bat  settings.py  speakr_app.py  tellr_app.py  transcriber.py
speakr/: __init__.py
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio.rs  main.rs  paste.rs  settings.rs  transcribe.rs
tellr/: __init__.py
