[project]
name = "speakr"
version = "1.0.0"
description = "Ultra-fast global voice dictation — press a hotkey, speak, text appears at your cursor."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Kartik Pawar" },
]
keywords = ["dictation", "voice", "speech-to-text", "groq", "whisper", "transcription"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Desktop Environment",
]

dependencies = [
    "customtkinter>=5.2.2",
    "pynput>=1.7.7",
    "sounddevice>=0.5.1",
    "numpy>=1.26.0",
    "pystray>=0.19.5",
    "pillow>=10.0.0",
    "requests>=2.31.0",
]

[project.scripts]
speakr = "speakr_app:main"

[project.urls]
Homepage = "https://github.com/kartikpawar/speakr"
Repository = "https://github.com/kartikpawar/speakr"
BugTracker = "https://github.com/kartikpawar/speakr/issues"

[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["speakr*"]

[tool.setuptools.package-data]
speakr = ["py.typed"]
