[package]
name = "speakr"
version = "0.1.0"
description = "Speakr - Personal dictation app"
authors = ["Kartik Pawar"]
edition = "2021"

[lib]
name = "speakr_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
image = "0.25"
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15"
reqwest = { version = "0.11", features = ["multipart", "json"] }
enigo = "0.1"
hound = "3.5"
tokio = { version = "1", features = ["full"] }
directories = "5.0"
base64 = "0.21"
dotenvy = "0.15"
oneshot = "0.1"

